minikube/infraestructure.yml
# Description: This file contains the infrastructure configuration for the TeachMe project.
# It contains the configuration for the following services:
# - Kafka
# - Redis
# - Blob Storage
############################################################################################################
# Kafka
############################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: wurstmeister/zookeeper
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
spec:
  selector:
    app: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      containers:
        - name: kafka-broker
          image: wurstmeister/kafka
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  selector:
    app: kafka-broker
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
  type: ClusterIP
---
############################################################################################################
# Redis Service
############################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-backend
  template:
    metadata:
      labels:
        app: redis-backend
    spec:
      containers:
        - name: redis-backend
          image: redis/redis-stack-server:latest
          ports:
            - name: http
              containerPort: 6379
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-backend
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
---
############################################################################################################
# Blob Storage
############################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blob-storage-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blob-storage
  template:
    metadata:
      labels:
        app: blob-storage
    spec:
      containers:
        - name: blob-storage
          image: mcr.microsoft.com/azure-storage/azurite
          ports:
            - containerPort: 10000
---
apiVersion: v1
kind: Service
metadata:
  name: blob-storage-service
spec:
  selector:
    app: blob-storage
  ports:
    - name: main
      protocol: TCP
      port: 10000
      targetPort: 10000
    - name: queue
      protocol: TCP
      port: 10001
      targetPort: 10001
    - name: table
      protocol: TCP
      port: 10002
      targetPort: 10002
  type: ClusterIP
---
