minikube/services.yml
# Description: This file contains the Kubernetes manifest for the TeachMe application services.
# It contains the configuration for the following services:
# - Auth Service
# - Student Service
# - Course Service
# - Forum Service
# - Rating Service
# - Certification Service (TODO)
# - Notification Service (TODO)
# - Frontend Service
# - API Gateway
############################################################################################################
# Auth Service
############################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-backend
  template:
    metadata:
      labels:
        app: auth-backend
    spec:
      containers:
        - name: auth-backend
          image: ghcr.io/teachme-cloudus/teachme-auth-service:master
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
############################################################################################################
# Student Service
############################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-backend
  template:
    metadata:
      labels:
        app: student-backend
    spec:
      containers:
        - name: student-backend
          image: raminkr/teachme-student-service:10d08d4167d833a3b760ca9f638855d74b7d3bdc
          command: ["java", "-jar", "/app/student-service.jar"]
          args:
            [
              "--spring.data.redis.host=redis-service",
              "--kafka-config.bootstrap-server=http://kafka-service:9092",
            ]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: student-service
spec:
  selector:
    app: student-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
############################################################################################################
# Course Service
############################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-backend
  template:
    metadata:
      labels:
        app: course-backend
    spec:
      containers:
        - name: course-backend
          image: pedlopruz/course-service:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: course-service
spec:
  selector:
    app: course-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
  type: ClusterIP
---
############################################################################################################
# Forum Service
############################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forum-backend
  template:
    metadata:
      labels:
        app: forum-backend
    spec:
      containers:
        - name: forum-backend
          image: martirl11/forum-service:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: forum-service
spec:
  selector:
    app: forum-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
############################################################################################################
# Rating Service
############################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-backend
  template:
    metadata:
      labels:
        app: rating-backend
    spec:
      containers:
        - name: rating-backend
          image: lucperrom1/teachme-ratings-service-rating-service:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rating-service
spec:
  selector:
    app: rating-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
############################################################################################################
# Certification Service
############################################################################################################
#
# TODO: Add the Certification Service Deployment and Service here
#
############################################################################################################
# Notification Service
############################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-backend
  template:
    metadata:
      labels:
        app: notification-backend
    spec:
      containers:
        - name: notification-backend
          image: raminkr/teachme-notification-service:2936599f41e5a645c092a8848514103096760fac
          command: ["java", "-jar", "/app/notification-service.jar"]
          args:
            [
              "--spring.data.redis.host=redis-service",
              "--kafka-config.bootstrap-server=http://kafka-service:9092",
            ]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
############################################################################################################
# Ingress Controller for Websocket Connections
############################################################################################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: notification.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8080
---
############################################################################################################
# Frontend Service
############################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-backend
  template:
    metadata:
      labels:
        app: frontend-backend
    spec:
      containers:
        - name: frontend-backend
          image: ghcr.io/teachme-cloudus/teachme-frontend:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: ClusterIP
---
############################################################################################################
# API Gateway
############################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-backend
  template:
    metadata:
      labels:
        app: gateway-backend
    spec:
      containers:
        - name: gateway-backend
          image: ghcr.io/teachme-cloudus/teachme-api-gateway:master
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
---
