minikube/infrastructure.yml
# Description: This file contains the infrastructure configuration for the TeachMe project.
# It contains the configuration for the following services:
# - Kafka
# - Redis
# - Blob Storage
############################################################################################################
# Kafka
############################################################################################################
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-network
spec:
  podSelector:
    matchLabels:
      network/kafka-network: "true"
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/kafka-network: "true"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
spec:
  serviceName: zookeeper
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
        network/kafka-network: "true"
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.4.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2181
      hostname: zookeeper
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
    - name: "default"
      port: 2181
      targetPort: 2181
  # type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
        network/kafka-network: "true"
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.4.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
            - containerPort: 29092
      hostname: kafka
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: external
      port: 9092
      targetPort: 9092
    - name: internal
      port: 29092
      targetPort: 29092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kcat
  labels:
    app: kcat
spec:
  selector:
    matchLabels:
      app: kcat
  replicas: 1
  template:
    metadata:
      labels:
        app: kcat
    spec:
      containers:
        - name: kafka-kcat
          image: confluentinc/cp-kafkacat:latest
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh"]
          args: ["-c", "trap : TERM INT; sleep infinity & wait"]
---
############################################################################################################
# Redis Service
############################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-backend
  template:
    metadata:
      labels:
        app: redis-backend
    spec:
      containers:
        - name: redis-backend
          image: redis/redis-stack-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6379
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-backend
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
---
############################################################################################################
# Blob Storage
############################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blob-storage-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blob-storage
  template:
    metadata:
      labels:
        app: blob-storage
    spec:
      containers:
        - name: blob-storage
          image: mcr.microsoft.com/azure-storage/azurite
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10000
---
apiVersion: v1
kind: Service
metadata:
  name: blob-storage-service
spec:
  selector:
    app: blob-storage
  ports:
    - name: main
      protocol: TCP
      port: 10000
      targetPort: 10000
    - name: queue
      protocol: TCP
      port: 10001
      targetPort: 10001
    - name: table
      protocol: TCP
      port: 10002
      targetPort: 10002
  type: ClusterIP
---
